K8s/Manifest-deploy-examples.yaml
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#     Manifest File to create Simple Deployment with Labels
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app : my-k8s-application
spec:
  selector:
    matchLabels:
      project: kgb
  template:
    metadata:
      labels:
        project: kgb
    spec:
      containers:
        - name : kgb-web
          image: adv4000/k8sphp:latest
          ports:
            - containerPort: 80
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#   Manifest File to create Deployment with Labels and ReplicaSet
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-replicas
  labels:
    app  : my-k8s-application
    env  : prod
    owner: ZhukValentyna
spec:
  replicas: 3
  selector:
    matchLabels:
      project: cia
  template:
    metadata:
      labels:
        project: cia
    spec:
      containers:
        - name : cia-web
          image: adv4000/k8sphp:version1
          ports:
            - containerPort: 80
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#   Manifest File to create Deployment with Labels and AutoScaling
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app  : my-k8s-application
    env  : prod
    owner: ZhukValentyna
spec:
#  replicas: 2   # Don't need this anymore as we are using HorizontalPodAutoscaler
  selector:
    matchLabels:
      project: mossad
  template:
    metadata:
      labels:
        project: mossad
    spec:
      containers:
        - name : mossad-web
          image: adv4000/k8sphp:version2
          ports:
            - containerPort: 80
