K8s/Manifest-ingress-exemples.yaml
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#              Manifest File to create Ingess Rules for Hosts
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: www.testlab.net
    http:
      paths:
        - backend:
           serviceName: main
           servicePort: 80

  - host: web1.testlab.net
    http:
      paths:
        - backend:
           serviceName: web1
           servicePort: 80

  - host: web2.testlab.net
    http:
      paths:
        - backend:
           serviceName: web2
           servicePort: 80

  - host: cat.testlab.net
    http:
      paths:
        - backend:
           serviceName: tomcat
           servicePort: 8080
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#            Manifest File to create Ingess Rules for Host Paths
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-paths

spec:
  rules:
  - host: www.testlab.net
    http:
      paths:
      - path: "/page1"
        backend:
          serviceName: webx
          servicePort: 80

      - path: "/page2"
        backend:
          serviceName: webx
          servicePort: 80

      - path: "/page3"
        backend:
          serviceName: webx
          servicePort: 80
